--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <h1 class="text-center">Wool Count Calculator</h1>
   <div class="row">
-    <div class="col col-3">
+    <div class="col col-6">
       <div class="buttons">
       </div>
       <div class="control-buttons">
@@ -17,7 +17,7 @@
         <button class="btn btn-warning m-1 clearbtn">Reset</button>
       </div>
     </div>
-    <div class="tally-container">
+    <div class="tally-container col-6">
       <h3>Total Count: <span class="count">0</span></h3>
       <h3>Micron: <span class="micron"></span></h3>
       <div class="tally-labels d-flex flex-column flex-wrap">
